# TorchGPE

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
_modules/: index.html
_static/: style.css
api/: callbacks.html  gas.html  index.html  potentials.html  utils.html
docs/: requirements.txt
stubs/: torchgpe.bec2D.callbacks.CavityMonitor.alpha.html  torchgpe.bec2D.callbacks.CavityMonitor.cavity_detuning.html  torchgpe.bec2D.callbacks.CavityMonitor.pump.html  torchgpe.bec2D.callbacks.CavityMonitor.times.html  torchgpe.bec2D.gas.Gas.Kx.html  torchgpe.bec2D.gas.Gas.Ky.html  torchgpe.bec2D.gas.Gas.N_grid.html  torchgpe.bec2D.gas.Gas.N_particles.html  torchgpe.bec2D.gas.Gas.X.html  torchgpe.bec2D.gas.Gas.Y.html  torchgpe.bec2D.gas.Gas.adim_length.html  torchgpe.bec2D.gas.Gas.adim_pulse.html  torchgpe.bec2D.gas.Gas.complex_dtype.html  torchgpe.bec2D.gas.Gas.coordinates.html  torchgpe.bec2D.gas.Gas.d2_pulse.html  torchgpe.bec2D.gas.Gas.density.html  torchgpe.bec2D.gas.Gas.densityk.html  torchgpe.bec2D.gas.Gas.device.html  torchgpe.bec2D.gas.Gas.dkx.html  torchgpe.bec2D.gas.Gas.dky.html  torchgpe.bec2D.gas.Gas.dx.html  torchgpe.bec2D.gas.Gas.dy.html  torchgpe.bec2D.gas.Gas.element.html  torchgpe.bec2D.gas.Gas.float_dtype.html  torchgpe.bec2D.gas.Gas.grid_size_x.html  torchgpe.bec2D.gas.Gas.grid_size_y.html  torchgpe.bec2D.gas.Gas.ground_state.html  torchgpe.bec2D.gas.Gas.kx.html  torchgpe.bec2D.gas.Gas.ky.html  torchgpe.bec2D.gas.Gas.mass.html  (+32 more)
(+209 files in other folders)
